objects/Series__c.object
<CustomObject>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Series</relationshipLabel>
        <relationshipName>Series</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Poster_URL__c</fullName>
        <label>Poster URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_URL__c</fullName>
        <label>Thumbnail URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>collection</fullName>
                </value>
                <value>
                    <fullName>genre</fullName>
                </value>
                <value>
                    <fullName>curated</fullName>
                </value>
                <value>
                    <fullName>series</fullName>
                </value>
                <value>
                    <fullName>season</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Series</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>